# ciforge

./: .gitignore  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
src/ciforge/: __init__.py  ai_reviewer.py  arch_diagram.py  assets.py  auto_fixer.py  auto_update.py  badges.py  blast_radius.py  changelog.py  chat.py  ci_cost.py  cli.py  cloud_cost.py  code_quality.py  community.py  config_drift.py  config_validator.py  coverage.py  dead_code.py  deploy_check.py  discord_notify.py  duplication.py  fixer.py  github_app.py  gui.py  iac_scan.py  ignore.py  l10n.py  load_test.py  mcp_scan.py  mcp_server.py  metrics.py  mobile_lint.py  multi_ai.py  pr_describe.py  prompt_scan.py  scanner.py  schema_guardian.py  secrets.py  semantic_bump.py  (+4 more)
tests/: test_ciforge.py
