[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ciforge-cli"
version = "1.0.0"
description = "A zero-dependency CI tool replacing multiple CI services."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ci", "github-actions", "code-quality", "coverage", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
ciforge = "ciforge.cli:main"
