[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ciforge-cli"
version = "4.2.0"
description = "A zero-dependency CI tool replacing multiple CI services."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ci", "github-actions", "code-quality", "coverage", "linting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Security",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = []

[project.scripts]
ciforge = "ciforge.cli:main"

[project.urls]
Homepage = "https://github.com/Tahiram32/ciforge"
"Source Code" = "https://github.com/Tahiram32/ciforge"
Repository = "https://github.com/Tahiram32/ciforge"
"Bug Tracker" = "https://github.com/Tahiram32/ciforge/issues"
